appId: ${MAESTRO_APP_ID}
---
- tapOn:
    id: "login-button"
    optional: true
- tapOn:
    id: "sign-in-link-button"
    optional: true
- tapOn:
    id: "back-to-signin-link-button"
    optional: true
- extendedWaitUntil:
    visible:
      id: "sign-in-screen"
    timeout: 10000
    optional: true
- runFlow:
    when:
      visible:
        id: "sign-in-screen"
    commands:
      - tapOn:
          id: "email-input"
      - inputText: "${email}"
      - tapOn:
          id: "password-input"
      - inputText: "${password}"
      - hideKeyboard
      - tapOn:
          id: "sign-in-button"
      - extendedWaitUntil:
          visible:
            id: "tab-button-plan"
          timeout: 20000
