appId: ${MAESTRO_APP_ID}
---
- runFlow:
    file: ../reusable/ensure_signed_out.yaml
- runFlow:
    file: ../reusable/assert_runtime_errors_clear.yaml
- assertVisible:
    id: "sign-in-screen"
- tapOn:
    id: "sign-up-link-button"
- assertVisible:
    id: "sign-up-screen"
- swipe:
    direction: UP
- tapOn:
    id: "sign-in-link-button"
- assertVisible:
    id: "sign-in-screen"
- tapOn:
    id: "forgot-password-button"
- assertVisible:
    id: "forgot-password-screen"
- tapOn:
    id: "back-to-signin-link-button"
- assertVisible:
    id: "sign-in-screen"
- runFlow:
    file: ../reusable/assert_runtime_errors_clear.yaml
